[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.31", features = ["serde"] }
itertools = "0.11.0"
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.49"
serde_json = "1.0.107"
tarpc = { version = "0.33.0", features = ["full"] }
tonic = "0.10.2"
prost = "0.12.3"

[dev-dependencies]
tempfile = "3.8.0"

[build-dependencies]
tonic-build = "0.10.2"